apps/base/linkwarden/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkwarden
  labels:
    app.kubernetes.io/component: linkwarden
