apps/base/linkwarden/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkwarden-httproute
  namespace: linkwarden
spec:
  parentRefs:
    - name: mdch-lab-gateway
      namespace: cilium
  hostnames:
    - "linkwarden.mdch-lab.dev"
  rules:
    - backendRefs:
      - name: linkwarden
        port: 8000
